<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".EditObat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Edit Obat"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_marginRight="85dp" >
        </ImageButton>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Nama"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="Masukan Obat"
        android:text="@string/namaObat"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Dosis"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="Masukan dosis setiap pemakaian (25ml/1 butir)"
        android:text="@string/dosisObat"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Deskripsi Obat"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="8dp"
        android:layout_marginBottom="15dp"
        android:hint="Berikan informasi mengenai deskripsi obat ..."
        android:text="@string/descObat"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Gambar Obat"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/image_obat"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img_obat" />

        <Button
            android:id="@+id/btn_pilih_gambar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pilih Gambar"
            android:layout_below="@id/image_obat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_edit_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Obat"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false" />

</LinearLayout>