<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".EditPasien">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Edit Pasien"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_marginRight="85dp" >
        </ImageButton>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Nama"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="Masukan nama"
        android:text="@string/name"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Tanggal Lahir"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edit_usia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="50 Tahun"
        android:text="@string/usia"
        android:padding="8dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Jenis Kelamin"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Radio Button -->
    <RadioGroup
        android:id="@+id/jenis_kelamin_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:checked="true"
            android:buttonTint="@color/green"
            android:text="Laki-laki" />

        <RadioButton
            android:id="@+id/perempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/laki"
            android:buttonTint="@color/green"
            android:text="Perempuan" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Riwayat Penyakit"
        android:textColor="@color/teksHitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/riwayat_penyakit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="8dp"
        android:layout_marginBottom="15dp"
        android:hint="Berikan informasi mengenai riwayat penyakit yang diderita pasien ..."
        android:text="@string/penyakit"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:id="@+id/btn_edit_pasien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Pasien"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false" />

</LinearLayout>